--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile project(':accountLibrary')
+    compile project(':aphAccountLibrary')
     compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibVersion"
 }
